AWS S3 and Kafka integrations